# homebroker

./: Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  pyproject.toml
backend/app/: manage.py
backend/app/account/: apps.py  urls.py
backend/app/account/admin/: __init__.py  account_admin.py  user_admin.py
backend/app/account/backends/: __init__.py  email_or_username_backend.py
backend/app/account/exceptions/: __init__.py  exceptions.py
backend/app/account/management/: __init__.py
backend/app/account/migrations/: 0001_initial.py  0002_account.py
backend/app/account/models/: __init__.py  account.py  user.py
backend/app/account/serializers/: __init__.py  account_serializer.py  auth_serializer.py  user_serializer.py
backend/app/account/tasks/: __init__.py  setup_user.py
backend/app/account/views/: __init__.py  account_viewset.py  auth_viewset.py  user_viewset.py
backend/app/core/: __init__.py  asgi.py  celery.py  common.py  constants.py  http.py  logger.py  settings.py  urls.py  utils.py  wsgi.py
backend/app/core/config/: exception_handler.py
backend/app/core/mixins/: __init__.py
backend/app/core/shared/: __init__.py  common.py  field_validators.py  utils.py
backend/app/core/tests/: test_admin_pages.py
backend/app/core/websocket/: __init__.py  authenticated_consumer.py  routing.py
backend/app/homebroker/: apps.py  urls.py
backend/app/homebroker/admin/: __init__.py  asset_admin.py  asset_daily_admin.py  order_admin.py  wallet_admin.py  wallet_asset_admin.py
backend/app/homebroker/constants/: __init__.py  choices.py
backend/app/homebroker/exceptions/: __init__.py  api_exceptions.py
backend/app/homebroker/filters/: __init__.py  asset_daily_filter.py  asset_filter.py  order_filter.py  wallet_filter.py
backend/app/homebroker/kafka/: __init__.py  common.py  topics.py
backend/app/homebroker/management/: __init__.py
backend/app/homebroker/managers/: __init__.py  order_manager.py
backend/app/homebroker/migrations/: 0001_initial.py
backend/app/homebroker/models/: __init__.py  asset.py  asset_daily.py  order.py  wallet.py  wallet_asset.py
backend/app/homebroker/querysets/: __init__.py  order_queryset.py
backend/app/homebroker/serializers/: __init__.py  asset_daily_serializer.py  asset_serializer.py  order_serializer.py  wallet_asset_serializer.py  wallet_serializer.py
backend/app/homebroker/services/: __init__.py  order_service.py
backend/app/homebroker/tasks/: __init__.py  task_create_default_assets.py  task_create_default_assets_dailies.py  task_generate_asset_dailies.py  task_process_order.py
backend/app/homebroker/validators/: __init__.py  order_validator.py
backend/app/homebroker/views/: __init__.py  asset_daily_viewset.py  asset_viewset.py  order_viewset.py  wallet_asset_viewset.py  wallet_viewset.py
backend/app/homebroker/websocket/: __init__.py  routing.py
backend/app/product/: apps.py  urls.py
backend/app/product/admin/: __init__.py  product_admin.py
backend/app/product/filters/: __init__.py  product_filter.py
backend/app/product/migrations/: 0001_initial.py  0002_alter_product_description.py
backend/app/product/models/: __init__.py  product.py
backend/app/product/serializers/: __init__.py  product_serializer.py
backend/scripts/: entrypoint.sh  kafka-init.sh  setup.sh
(+126 files in other folders)
